# shallow_red_engine

./: .gitignore  Cargo.toml  data.rs  mod.rs  readme.md
examples/: main.rs
src/: consts.rs  engine.rs  evaluation.rs  extensions.rs  gamestate.rs  lib.rs  ordering.rs  psqt.rs  quiescent.rs  search.rs  utils.rs
src/managers/: cache_manager.rs  mod.rs  stats_manager.rs
src/utils/: common.rs  engine_interface.rs  mod.rs  search_interface.rs
tests/: endgame_tests.rs  performance_tests_engine.rs  performance_tests_search.rs
