[package]
name = "shallow_red_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
chess = ">0.0.1"
itertools = "0.10.5"
serde = { version = "1.0", features = ["derive"] } # needed for the tauri frontend

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] } # for our async test runtime