[package]
name = "shallow_red_engine"
version = "0.1.0"
edition = "2021"

[profile.bench]
debug = true

[profile.release]
debug = false

#[target.x86_64-unknown-linux-gnu]
#linker = "/usr/bin/clang"
#rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[dependencies]
chess = ">0.0.1"
itertools = "0.10.5"
serde = { version = "1.0", features = ["derive"] } # needed for the tauri frontend

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] } # for our async test runtime